# tcriaclean

./: CODE_OF_CONDUCT.MD  CONTRIBUTING.md  LICENSE  Legal-narative-overview.md  README.md  app.py  approved_latest_project_structure_snapshot.json  approved_latest_project_structure_snapshot.md  architecture-overview.md  audit_accusation_bundle_with_tcr_gateway.py  audit_pdfs_with_tcr_gateway.py  cli.py  current_project_structure_snapshot.json  current_project_structure_snapshot.md  current_vs_approved_latest_diff.json  current_vs_approved_latest_diff.md  generate_accusation_bundle_audit_report_pdf.py  generate_app_summary_pdf.py  generate_bernardo_accusatory_executive_summary_pdf.py  generate_bernardo_accusatory_executive_summary_pdf_peticao.py  generate_bernardo_accusatory_executive_summary_pdf_ptbr.py  generate_tcr_audit_report_pdf.py  generate_tcr_signals_gateway_file.py  pyproject.toml
