[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcria"
version = "0.1.0"
description = "TCRIA — Legal evidence governance scanner (TCR gateway)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Rodrigo Baptista da Silva"}]
dependencies = [
  "pypdf>=4.0.0",
  "reportlab>=4.0.0",
  "python-docx>=1.0.0",
  "streamlit>=1.30.0",
]

[project.scripts]
tcria = "tcria.cli:main"

[tool.setuptools]
packages = ["tcria"]
